<resources>
    <string name="app_name">DoneTime</string>
    <string name="add_set">+ set</string>
    <string name="delete_set">- set</string>
    <string name="add_exercise">Add exercise +</string>
    <string name="start_new_workout">Start new workout</string>
    <string name="exercise">Exercise</string>
    <string name="tag">Tag</string>
    <string name="number">0.</string>
    <string name="reps_cur">Reps: </string>
    <string name="weight_cur">Weight: </string>
    <string name="home">Home</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="finish">Finish</string>
    <string name="weight">Weight</string>
    <string name="dropdown_sets_list">Dropdown sets list</string>
    <string name="date">20.10.2021</string>
    <string name="set">. Set </string>
    <string name="kg"> kg. </string>
    <string name="comma">. </string>
    <string name="add_new_category">Add new category</string>
    <string name="new_category">New category</string>
    <string name="new_subcategory">New Subcategory</string>
    <string name="add_new_subcategory">Add New Subcategory</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="exercise_title">Exercise title</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="exercise_image">Exercise Image</string>
</resources>