<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ex_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_img"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:cardCornerRadius="@dimen/corner_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/ex_description">

        <ImageView
            android:id="@+id/exercise_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/background.accent"
            android:contentDescription="@string/exercise_image"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/exercise_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exercise_title"
        android:layout_marginHorizontal="8dp"
        />

    <TextView
        android:id="@+id/exercise_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:layout_marginHorizontal="16dp"
        />

</LinearLayout>