<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/exercise_tag"
        android:layout_marginStart="8dp"
        />
    <TextView
        android:id="@+id/exercise_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/edit"
        app:layout_constraintBottom_toBottomOf="@id/edit"
        app:layout_constraintEnd_toStartOf="@id/edit"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/tag"
        />
    <ImageView
        android:id="@+id/edit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="8dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/edit"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_workout_note_set"
        tools:itemCount="5"
        android:background="@drawable/single_corners_shape"
        android:padding="8dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>